*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.2 ===
* Added missing inline display to the plugin.

=== 1.0.1 ===
* Fixed cracling sound caused by small buffer gaps.
* Updated build scripts and dependencies.

=== 1.0.0 ===
* Initial version.
* Updated build scripts and dependencies.
